   [build-system]
   requires = ["setuptools>=45", "wheel"]
   build-backend = "setuptools.build_meta"

   [project]
   name = "medixar"
   version = "0.1.0"
   dependencies = [
       "requests>=2.25.1",
       "numpy>=1.20.0",
       "langchain-core>=0.2.11",
       "langchain-community>=0.2.11",
       "langchain-openai>=0.2.11",
       "pandas>=1.5.3",
       "pydantic>=1.10.11",
       "Pillow>=10.0.0",
       "torchxrayvision>=1.0.1",
   ]